# context-engineering-qdrant-workshop

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
workshop/: __main__.py  cli.py  config.py
workshop/context_engineering/: context.py  prompts.py  search_engine_query.py  tools.py
workshop/infrastructure/: ingestion.py  search_engine.py
